<resources>
    <string name="app_name">Restaurants</string>
    <string name="header">Enter Details To Authenticate</string>
    <string name="email">Enter you email</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="category">Select Your Location</string>
    <string name="junk">Junk Food Image</string>
    <string name="welcome">Welcome to Hunger Times</string>
    <string name="manhattan">Manhattan</string>
    <string name="brooklyn">Brooklyn</string>

    <string-array name="location_array">
        <item>Bronx</item>
        <item>Brooklyn</item>
        <item>Manhattan</item>
        <item>Queens</item>
        <item>Staten Island</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="locOrFood">Enter a location within New York, cuisine or both</string>
    <string name="enterLocation">Enter Location within New York</string>
    <string name="enterCuisine">Enter a cuisine</string>
    <string name="search">Search</string>
</resources>