<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:alpha="0.5"
        android:scaleType="centerCrop"
        android:contentDescription="@string/junk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/foodgirl"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/label_select"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_manhattan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="70dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="@id/label_select"
        app:layout_constraintRight_toRightOf="@id/label_select"
        app:layout_constraintLeft_toLeftOf="@id/label_select"
        android:text="@string/manhattan"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_brooklyn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@color/cardview_shadow_start_color"
        app:layout_constraintTop_toBottomOf="@id/btn_manhattan"
        app:layout_constraintRight_toRightOf="@id/btn_manhattan"
        app:layout_constraintLeft_toLeftOf="@id/btn_manhattan"
        android:text="@string/brooklyn"/>

</androidx.constraintlayout.widget.ConstraintLayout>